# hass-recurring-todos

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  features.json  hacs.json  info.md  pyproject.toml
custom_components/recurring_todos/: __init__.py  config_flow.py  const.py  icons.json  manifest.json  model.py  notify.py  recurrence.py  services.yaml  store.py  strings.json  todo.py
custom_components/recurring_todos/translations/: en.json
custom_components/recurring_todos/www/: recurring-todos-card.js
docs/: api-reference.md  architecture.md
tests/: conftest.py  e2e_card_registration.py  test_card_rrule.js  test_config_flow.py  test_init.py  test_model.py  test_notify.py  test_notify_integration.py  test_recurrence.py  test_service_errors.py  test_store.py  test_todo_integration.py
