[project]
name = "recurring-todos"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "voluptuous>=0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
